# Hops_parser_torch

./: .gitignore  GUIDE_TO_RUN.md  RESEARCH_PLAN.md  STRUCTURED_VERIFICATION.md
depver/: pyproject.toml
depver/depver/: __init__.py  cli.py  pipeline.py  schema.py
depver/depver/comparison/: __init__.py  divergence.py  matcher.py  similarity.py
depver/depver/extraction/: __init__.py  entities.py  triples.py  walkers.py
depver/depver/scoring/: __init__.py  metrics.py  report.py
depver/tests/: conftest.py  test_comparison.py  test_extraction.py  test_pipeline.py  test_scoring.py
experiments/: eval_aggrefact.py  eval_frank.py  prepare_data.py  run_all.py
experiments/baselines/: run_bertscore.py
scripts/jeanzay/: config_en_roberta.yaml  download_ud.sh  run_all_a100.slurm  run_eval.slurm  run_quick_test.slurm  run_tests.slurm  setup.sh  smoke_test_french.py  train_en_model.slurm
