[project]
name = "depver"
version = "0.1.0"
description = "Dependency-structure verification of LLM outputs"
requires-python = ">= 3.11"
license = "MIT"
dependencies = [
    "hopsparser >= 0.8.0",
    "torch >= 2.0.0, < 2.10.0",
]

[project.optional-dependencies]
wordnet = ["nltk >= 3.8, < 4.0"]
nli = ["transformers >= 4.19.0, < 5.0.0"]
embeddings = ["sentence-transformers >= 2.0, < 4.0"]
eval = [
    "datasets >= 2.14",
    "pandas >= 2.0",
    "scikit-learn >= 1.3",
    "matplotlib >= 3.7",
    "seaborn >= 0.13",
    "bert-score >= 0.3.13",
    "rouge-score >= 0.1.2",
]
server = [
    "fastapi",
    "uvicorn",
]
tests = [
    "pytest >= 7.0, < 9.0",
    "pytest-mock",
]
all = ["depver[wordnet,nli,embeddings,eval,server,tests]"]

[project.scripts]
depver = "depver.cli:main"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["depver", "depver.extraction", "depver.comparison", "depver.scoring"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
markers = [
    "slow: marks tests that require a loaded parser model",
]
